Ensure tox uses the tests group of dependencies.

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ deps =
     coverage>=7.2.7
     wheel>=0.40.0
 commands =
-    pip install -e .
+    pip install -e .[tests]
     pytest . --cov --cov-report=term-missing -vv --doctest-glob="*.py"
     coverage report
     coverage xml
