--- a/tox.ini
+++ b/tox.ini
@@ -23,8 +23,9 @@ deps =
     pytest-cov>=4.0.0
     coverage>=7.2.7
     wheel>=0.40.0
+    httpx>=0.25.0
 commands =
-    pip install -e .[tests]
+    pip install -e .
     pytest . --cov --cov-report=term-missing -vv --doctest-glob="*.py"
     coverage report
     coverage xml
